# ai-top-utility

./: .gitignore  LICENSE  README.md  please_first_update_bios_for_AI_TOP_motherboard.txt
.devcontainer/: devcontainer.json
RAG_test_files/: B650 GAMING X rev 15.txt  Jay_Chou_english.docx  Z370 AORUS Gaming 3 rev 10.txt  Z490 AORUS MASTER rev 1x.txt  Z690 AORUS ELITE AX rev 1x.txt  Z790 AORUS ELITE X.txt  Z790 AORUS PRO X.txt  美利堅合眾國憲法.txt
Ubuntu 24.04.4 LTS _ Driver and Cuda-ROCm Installation for NVIDIA-AMD GPU/: amd_driver_rocm_2404.sh  nvidia_driver_cuda_2404.sh
ai-top-map/: AGENT-TOOL-INVENTORY.md  ARCHITECTURE.md  ROADMAP.md  (+3 more)
ai-top-map/ai-top-complete/ai-top-extracted/app-source/resources/Install/Video-LLaVA/: elastic_agent.py  pyproject.toml  pyproject.tomlZone.Identifier  requirements.txt
ai-top-map/ai-top-complete/ai-top-extracted/app-source/resources/Install/Video-LLaVA/checkpoints/videollava-7b-pretrain/: README.md  config.json
ai-top-map/ai-top-complete/ai-top-extracted/app-source/resources/Install/Video-LLaVA/scripts/: zero3.json  zero3_offload.json
ai-top-map/ai-top-complete/ai-top-extracted/app-source/resources/Install/Video-LLaVA/videollava/model/: builder.py  llava_arch.py
ai-top-map/ai-top-complete/ai-top-extracted/app-source/resources/Install/Video-LLaVA/videollava/model/multimodal_encoder/: builder.py  clip_encoder.py
ai-top-map/ai-top-complete/ai-top-extracted/app-source/resources/Install/Video-LLaVA/videollava/model/multimodal_encoder/languagebind/: __init__.py
ai-top-map/ai-top-complete/ai-top-extracted/app-source/resources/Install/Video-LLaVA/videollava/train/: train.py  train_mem.py
(+218 files in other folders)
