[build-system]
requires = ["setuptools==78.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "videollava"
version = "1.0.0"
description = "Learning United Visual Representation by Alignment Before Projection."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "transformers==4.31.0", "tokenizers==0.13.3", "sentencepiece==0.2.1", "shortuuid==1.0.13",
    "accelerate==0.21.0", "peft==0.4.0", "bitsandbytes==0.43.1",
    "pydantic==1.10.19", "markdown2==2.5.1", "numpy==1.26.4", "scikit-learn==1.5.0",
    "requests==2.32.3", "httpx==0.24.0", "uvicorn==0.32.1", "fastapi==0.115.5",
    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.6.13",
    "tensorboardX==2.6.2.2", "gradio==3.37.0", "gradio_client==0.7.0"
] # "torch==2.1.0", "torchvision==0.16.0", "torchaudio==2.1.0",

[project.optional-dependencies]
train = ["deepspeed==0.19.0", "ninja==1.11.1.2", "wandb==0.18.7", "pytorchvideo==0.1.1"] # ["deepspeed==0.9.5", "ninja", "wandb"]

[project.urls]
"Homepage" = "https://github.com/PKU-YuanGroup/Video-LLaVA"
"Bug Tracker" = "https://github.com/PKU-YuanGroup/Video-LLaVA/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
